--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
-version: '3.4'
+version: '3.9'
 
 services:
-  iotbay:
+  iotbay-app:
     image: ${DOCKER_REGISTRY-}iotbay
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - 8080:80
+      - 4433:443
