updated models and started integrating database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "iotbay-db": "Server=localhost;Database=IoTBayDb;User Id=SA;Password=A(!)TerriblePassw0rd1;"
+  }
 }
