--- a/src/IoTBay/appsettings.json
+++ b/src/IoTBay/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "iotbay-db": "Server=localhost;Database=IoTBayDb;User Id=SA;Password=A(!)TerriblePassw0rd1;"
+    "iotbay-db": "Server=localhost;Database=IoTBayDb;User Id=SA;Password=A(!)TerriblePassw0rd1;",
+    "global-cloud": "Server=34.151.96.119; Database=iotbaydb; User Id=sqlserver; Password=ekvkdK2%^8"
   }
 }
