--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,15 @@
+root = true
+
+[*]
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+guidelines = 80
+
 # Rules in this file were initially inferred by Visual Studio IntelliCode from the D:\Code\Dotnet\IoTBay codebase based on best match to current usage at 22/03/2022
 # You can modify the rules from these initially generated values to suit your own policies
 # You can learn more about editorconfig here: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
 [*.cs]
-
-
-#Core editorconfig formatting - indentation
-
-#use soft tabs (spaces) for indentation
-indent_style = space
-
 #Formatting - organize using options
 
 #sort System.* using directives alphabetically, and place them before other usings
@@ -67,6 +68,8 @@ dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
 
 #Style - Modifier preferences
+
+dotnet_style_namespace_declarations = file_scoped:warning;
 
 #when this rule is set to a list of modifiers, prefer the specified ordering.
 csharp_preferred_modifier_order = public,private,abstract,readonly:suggestion
