testing microsoft identity platform

--- a/src/IoTBay/appsettings.json
+++ b/src/IoTBay/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "iotbay-db": "Server=localhost;Database=IoTBayDb;User Id=SA;Password=A(!)TerriblePassw0rd1;",
-    "global-cloud": "Server=34.151.96.119; Database=iotbaydb; User Id=sqlserver; Password=ekvkdK2%^8"
+    "global-cloud": "Server=34.151.96.119; Database=iotbaydb; User Id=sqlserver; Password=ekvkdK2%^8",
+    "global-cloud-test": "Server=34.151.96.119; Database=iotbaydb-test; User Id=sqlserver; Password=ekvkdK2%^8",
+    "IoTBayDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IoTBay;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
